--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "2"
 members = [
-  "day-1", "day-10", "day-11",
+  "day-1", "day-10", "day-11", "day-12",
   "day-2",
   "day-3",
   "day-4",
